--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+aioconsole==0.6.0
+aiohttp==3.8.4
+aiosqlite==0.18.0
 bech32==1.2.0
-cachetools==5.2.0
-cryptography==38.0.4
-#idna==3.4
-#pkg-resources==0.0.0
+cachetools==5.3.0
+cryptography==39.0.1
+prompt_toolkit==3.0.36
+psycopg2==2.9.5
 secp256k1==0.14.0
-
-aiohttp~=3.8.3
-websockets~=10.4
-toml~=0.10.2
+toml==0.10.2
+websockets==10.4
