updated install instructions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-aioconsole=>0.6.1
-aiohttp=>3.8.4
-aiosqlite=>0.19.0
-bech32=>1.2.0
-cachetools=>5.3.0
-cryptography=>40.0.2
-prompt_toolkit=>3.0.38
-psycopg2=>2.9.6
-secp256k1=>0.14.0
-setuptools=>59.6.0
-toml=>0.10.2
+aioconsole>=0.6.1
+aiohttp>=3.8.4
+aiosqlite>=0.19.0
+bech32>=1.2.0
+cachetools>=5.3.0
+cryptography>=40.0.2
+prompt_toolkit>=3.0.38
+psycopg2>=2.9.6
+secp256k1>=0.14.0
+setuptools>=59.6.0
+toml>=0.10.2
